--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@arcjet/inspect": "^1.0.0-beta.9",
+    "@arcjet/next": "^1.0.0-beta.9",
     "@hookform/resolvers": "^5.2.0",
     "@prisma/client": "^6.12.0",
     "@radix-ui/react-dialog": "^1.1.14",
