--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.61.1",
     "recharts": "2.15.4",
+    "slugify": "^1.6.6",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
