--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
   "prettier.printWidth": 100,
   "prettier.semi": true,
   "prettier.singleQuote": true,
-  "prettier.trailingComma": "all"
+  "prettier.trailingComma": "all",
+  "prettier.indent_size": 2
 }
