--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
@@ -46,7 +47,7 @@
     "clsx": "^2.1.1",
     "html-react-parser": "^5.2.6",
     "input-otp": "^1.4.2",
-    "lucide-react": "^0.534.0",
+    "lucide-react": "^0.539.0",
     "next": "15.4.4",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.5",
@@ -62,7 +63,7 @@
     "tailwind-merge": "^3.3.1",
     "uuid": "^11.1.0",
     "vaul": "^1.1.2",
-    "zod": "^3.25.76"
+    "zod": "^4.0.16"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
